<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.nlscan.android.usbserialdemo.MainActivity"
    android:orientation="vertical">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fadingEdge="vertical">
    <LinearLayout
        android:id="@+id/llayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/t0"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/d1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:scrollbars="vertical"
                android:background="@drawable/textview_border_noright"
                android:textSize="18sp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/t5"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/d2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border_norightleft"
                android:scrollbars="vertical"
                android:layout_weight="30"
                android:textSize="18sp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/d3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border_norightleft"
                android:scrollbars="vertical"
                android:layout_weight="30"
                android:textSize="18sp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/d4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border_norightleft"
                android:scrollbars="vertical"
                android:layout_weight="30"
                android:textSize="18sp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/t3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/d5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border_noleft"
                android:scrollbars="vertical"
                android:layout_weight="30"
                android:textSize="18sp"
                android:text="" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="23"
        android:orientation="horizontal">


        <!--<TextView-->
            <!--android:id="@+id/textView1"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:hint="USB COM Port模式"-->
            <!--android:textSize="25sp"-->
            <!--android:background="@drawable/textview_border"-->
            <!--android:scrollbars="vertical"-->
            <!--android:fadeScrollbars="false"-->
            <!--android:text=""-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:layout_width="0dp" />-->

        <EditText
            android:id="@+id/editText2"
            android:textSize="25sp"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:background="@drawable/textview_border"
            android:scrollbars="vertical"
            android:layout_width="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!--<Button-->
                <!--android:id="@+id/buttonCalc"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/t6" />-->

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:text="@string/t4" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
        </LinearLayout>

    </LinearLayout>

</LinearLayout>